--- a/ios/reduxApp/Info.plist
+++ b/ios/reduxApp/Info.plist
@@ -70,6 +70,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Monaco-Linux.ttf</string>
+		<string>monaco.ttf</string>
 	</array>
 </dict>
 </plist>
